--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/etMessage"
+        android:hint="Your message" />
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/etPhoneNumber"
+        android:hint="Phone number (digits only)"
+        android:layout_below="@+id/etMessage"
+        android:inputType="phone"
+        android:digits="1234567890"
+        android:maxLength="10"/>
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/etMinutes"
+        android:hint="Interval (minutes)"
+        android:layout_below="@+id/etPhoneNumber"
+        android:inputType="number"
+        android:digits="123456789"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnButton"
+        android:text="Start"
+        android:layout_below="@+id/etMinutes"/>
 
 </RelativeLayout>
